--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.10"
 flask = "^3.0.2"
 sqlalchemy = "^2.0.29"
 mysql-connector-python = "^8.4.0"
+passlib = "^1.7.4"
+wtforms = "^3.1.2"
+markupsafe = "^2.1.5"
 
 
 [build-system]
